# grid_generator

./: .gitignore  CMakeLists.txt  README.md
build-linux/: grid_generator
src/: geometry.h  main.cpp  rectangular.cpp  rectangular.h  renderer.cpp  renderer.h  triangular.cpp  triangular.h
